# Snake-Pro-C-Plus-Plus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml
include/: Config.h  Constants.hpp  Direction.h  Food.hpp  Game.h  Game.hpp  Position.h  Renderer.hpp  ScoreManager.h  ScoreManager.hpp  Snake.h  Snake.hpp
include/core/: Config.h  Math.h  Settings.h  Types.h
include/engine/: ColorPalette.h  Colors.h  ParticleSystem.h  Renderer.h
include/game/: Config.h  Game.h  InputHandler.h  Position.h  Renderer.h  ScoreManager.h  Snake.h
src/: Food.cpp  Game.cpp  InputHandler.cpp  Renderer.cpp  ScoreManager.cpp  Snake.cpp  main.cpp
src/engine/: ColorPalette.cpp  Colors.cpp  ParticleSystem.cpp  Renderer.cpp
src/game/: Game.cpp  ScoreManager.cpp  Snake.cpp
